[package]
name = "murder"
version = "0.0.1"
edition = "2021"

[dependencies]
accesskit = "0.17.1"
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = {git = "https://github.com/bevyengine/bevy"}
bevy-trait-query = "0.6.0"
bevy_mod_picking = "0.20.1"
default-args = "1.0.0"
list-modules = "0.1.6"
rand = "0.8.5"
